err/django-alipay.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/alipay'...
Listing './lib/python3.5/site-packages/alipay/create_direct_pay_by_user'...
Listing './lib/python3.5/site-packages/alipay/create_direct_pay_by_user/dpn'...
Compiling './lib/python3.5/site-packages/alipay/create_direct_pay_by_user/dpn/views.py'...
***   File "./lib/python3.5/site-packages/alipay/create_direct_pay_by_user/dpn/views.py", line 29
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/alipay/create_partner_trade_by_buyer'...
Listing './lib/python3.5/site-packages/alipay/create_partner_trade_by_buyer/ptn'...
Compiling './lib/python3.5/site-packages/alipay/create_partner_trade_by_buyer/ptn/views.py'...
***   File "./lib/python3.5/site-packages/alipay/create_partner_trade_by_buyer/ptn/views.py", line 29
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/alipay/helpers.py'...
***   File "./lib/python3.5/site-packages/alipay/helpers.py", line 19
    netmask = struct.unpack('L',socket.inet_aton(netaddr))[0] & ((2L<<int(bits)-1) - 1)
                                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/alipay/send_goods_confirm_by_platform'...
Listing './lib/python3.5/site-packages/django_alipay-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
